app/static/css/college.css
.college-main-container{
    width: 60vw;
    height: calc(100vh - 60px);
    overflow-y: auto;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    gap: 20px;
    align-items: center;
    padding-top: 40px;
    padding-bottom: 20px;
}

.edit-college-modal-container p,
.add-college-modal-container p{
    font-size: 30px;
    font-weight: bolder;
}

.add-college-modal-button{
    padding: 10px 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    background-color: var(--green);
    right: -1%;
    border-radius: 10px;
    cursor: pointer;
    color: var(--white);
}

.add-college-modal-button:hover{
    padding: 10px 40px;
    transition-duration: 250ms;
    transition-timing-function: ease-out;
}

.college-container{
    width: 100%;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    min-height: 145px;
    position: relative;
    background: white;
    padding: 5px;
    border-radius: 5px;
}

.college-clippath{
    width: 100%;
    background-image: url("../images/college.jpg");
    background-position: center;
    background-size: cover;
    height: 100%;
    clip-path: polygon(50% 0%, 100% 0, 100% 1%, 60% 35%, 15% 65%, 0 100%, 0 0);
}
.college-details{
    position: absolute;
    bottom: 0;
    right: 0;;
    margin: 10px;
    display: flex;
    flex-direction: column;
    align-items: end;
}

.college-details p span{
    font-weight: bolder;
}

.college-action{
    width: 100px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    display: flex;
    gap: 5px;
    position: absolute;
    top: -10%;
    right: 0;
    justify-content: space-around;
}

.edit-icon-college-container{
    background-color: var(--green);

}
.delete-icon-college-container, .edit-icon-college-container{
    padding: 7px 10px;
    border-radius: 5px;
}
.delete-icon-college-container{
    background-color: var(--red);
}

.edit-icon-college-container:hover{
    background-color: #137447;
}

.delete-icon-college-container:hover{
    background-color: #9e2733;
}
.college-action div img{
    width: 15px;
}

.edit-college-modal-container,
.add-college-modal-container{
    height: 75vh;
    width: 45vw;
    position: fixed;
    background-color: white;
    z-index: 20;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 50px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    padding: 20px 50px;
    top: 140%;
    right: -140%;
}


.delete-college-close,
.edit-college-close,
.add-college-close{
    position: absolute;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    background-color: var(--red);
    display: flex;
    justify-content: center;
    align-items: center;
    top: -2.5%;
    right: -2%;
    cursor: pointer;
}

.edit-college-modal-row-input-container,
.add-college-modal-row-input-container{
    display: flex;
    width: 100%;
    margin-top: 30px;
    margin-bottom: 30px;
}

.edit-college-modal-row-input-container input,
.add-college-modal-row-input-container input{
    padding: 5px 10px;
}

.delete-icon-college-container{
    background-color: var(--red);
}

#delete_college_button,
#edit_college_submit_button,
#add_college_submit_button{
    background-color: var(--green);
}


#delete_college_button:hover,
#edit_college_submit_button:hover,
#add_college_submit_button:hover{
    background-color: #137447;
}

#delete_college_cancel_button:hover,
#edit_college_cancel_button:hover,
#add_college_cancel_button:hover{
    background-color: #9e2733;
}

#delete_college_cancel_button,
#edit_college_cancel_button,
#add_college_cancel_button{
    background-color: var(--red);
}

#delete_college_button,#delete_college_cancel_button,
#edit_college_submit_button, #edit_college_cancel_button,
#add_college_submit_button, #add_college_cancel_button{
    width: 100%;
    padding: 10px 15px;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    margin: 5px;
    color: var(--white);
    cursor: pointer;
} 


.course-count{
    font-size: 10px;
    color: gray;
}

